--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,13 @@
 <!-- start custom footer snippets -->
-
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 <!-- end custom footer snippets -->
