--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 {% if jekyll.environment == 'production' %}
-<!-- jekyll.environment : {{ jekyll.environment }}
+<!-- jekyll.environment : {{ jekyll.environment }} -->
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 {% comment %}
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
