--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -50,7 +50,7 @@
             {% assign minHeader = headerLevel %}
         {% endif %}
 
-        {% assign indentAmount = headerLevel | minus: minHeader | add: 1 %}
+        {% assign indentAmount = headerLevel | minus: minHeader | plus: 1 %}
         {% assign _workspace = node | split: '</h' %}
 
         {% assign _idWorkspace = _workspace[0] | split: 'id="' %}
