--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -58,7 +58,7 @@
 /* remove border*/
 .page__content {
   .archive__item-title {
-    margin-top: 0;
+    margin-top: 1em;
     border-bottom: none;
   }
 }
@@ -223,7 +223,7 @@
 
 .feature__wrapper {
   @include clearfix();
-  // margin-bottom: 2em;
+  margin-bottom: 2em;
   // border-bottom: 1px solid $border-color;
 
   .archive__item-title {
